# MPI-Poisson-Solver

./: .gitignore  CMakeLists.txt  README.md  gravity.c  gravity.h  grid.c  grid.h  main.c  tree.c  tree.h  vector.h  visualize.py
.github/workflows/: deploy_docs.yml
docs/: conf.py  index.rst
docs/api/: class_view_hierarchy.rst.include  define_gravity_8c_1aed9ea78689ecce0b7264c02c7f8a9a54.rst  define_main_8c_1a08246606c233e7785a497c09672f366f.rst  define_main_8c_1a3ae27628c4772f67de892e1f6e7fa30a.rst  define_main_8c_1a8597c281cebf93733a4e6ac5cf212c19.rst  file_gravity.c.rst  file_gravity.h.rst  file_grid.c.rst  file_grid.h.rst  file_main.c.rst  file_tree.c.rst  file_tree.h.rst  file_vector.h.rst  file_view_hierarchy.rst.include  file_visualize.py.rst  function_gravity_8c_1a65a6a034e1a2f2fe51be4b578164d95a.rst  function_gravity_8c_1afbbe3f1f882144c8e15baece40e798eb.rst  function_gravity_8h_1afbbe3f1f882144c8e15baece40e798eb.rst  function_grid_8c_1a7a9ffb593f4414acf1186cd470343095.rst  function_grid_8c_1aeed6032909b773f5e9a6cdfe4de0dbc3.rst  function_grid_8c_1afcc46dd0bfe6acf4f3bd48e2cbf5bb65.rst  function_grid_8h_1a7a9ffb593f4414acf1186cd470343095.rst  function_grid_8h_1aeed6032909b773f5e9a6cdfe4de0dbc3.rst  function_grid_8h_1afcc46dd0bfe6acf4f3bd48e2cbf5bb65.rst  function_main_8c_1a0ddf1224851353fc92bfbff6f499fa97.rst  function_tree_8c_1a6248b6a790c4a9399d54f81a702e42db.rst  function_tree_8c_1a62d31db5f01e9423e0307730f117be63.rst  function_tree_8c_1a75358d3ad3d60703fbbe43dea49c66c9.rst  function_tree_8c_1a83203612280bc71b12c935ee0394b43e.rst  namespace_visualize.rst  (+39 more)
